# ponika

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml
docs/: hooks.py  index.md
docs/guides/: contributing.md  endpoint-patterns.md  getting-started.md
examples/: README.md  config.py  config_as_code.py
examples/auto_reboot/: config_state.py  ping_wget_create.py  ping_wget_delete.py  ping_wget_get.py  ping_wget_list.py  ping_wget_update.py  scheduler_create.py  scheduler_delete.py  scheduler_get.py  scheduler_list.py  scheduler_update.py
examples/dhcp_server/: config_state.py
examples/ip_routes/: config_state.py
examples/recipients/: config_state.py  email_users_create.py  email_users_delete.py  email_users_get.py  email_users_list.py  email_users_send_test_email.py  email_users_update.py  email_users_upload_ca_certificate.py  phone_groups_create.py  phone_groups_delete.py  phone_groups_get.py  phone_groups_list.py  phone_groups_update.py  phone_groups_upload_phone_numbers.py
examples/sms_utilities/: config_state.py  rules_create.py  rules_delete.py  rules_get.py  rules_list.py  rules_update.py
examples/wireguard/: config_state.py
examples/wireless/: config_state.py  interface_delete.py  interface_get.py
examples/zerotier/: config_state.py
src/ponika/: __init__.py  config.py  models.py  test_client.py
src/ponika/endpoints/: __init__.py  ip_routes.py  modems.py  sim_cards.py  users.py
tests/: test_auto_reboot.py  test_config_as_code.py  test_recipients.py  test_sms_utilities.py
(+12 files in other folders)
