[project]
name = "ponika"
version = "0.4.0"
description = "Teltonika Device API Client"
readme = "README.md"
authors = [
    { name = "Ben Evans", email = "ben@bluechimp.io" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.5",
    "requests>=2.32.3",
]

[project.scripts]
ponika = "ponika:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-shadcn>=0.9.9",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.21",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]
